edited header background, updated covers (size, position, repeat), added page footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<p class="text-center" id="my-description">List of my favorite polish albums of the last 5 years (2014 - 2018)</p>
 			</div>
 		</div>
+		
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 my-cover" id="zimpel-ziolek">
@@ -179,6 +180,17 @@
 						</div>
 					</a>
 				</div>
+			</div>
+		</div>
+		
+		<div class="jumbotron jumbotron-fluid" id="my-page-footer">
+			<div class="container">
+				<div class="text-center" id="my-socials">
+					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank"><img src="img/icons/facebook.png" /></a>
+					<a href="https://github.com/mateuszchrzanowski" target="_blank"><img src="img/icons/github.png" /></a>
+					<a href="#" target="_blank"><img src="img/icons/linkedin.png" /></a>
+				</div>
+				<div class="text-center" id="my-copy">&copy; 2018 Copyright Mateusz Chrzanowski</div>
 			</div>
 		</div>
 	</body>
