edited header background position, edited font colors, edited page footer, added hover effects in footer links

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-6 my-cover" id="thaw">
-					<a href="https://www.cvltnation.com/thaw-earth-ground-album-review/" class="my-review-link" target="_blank">
+				<div class="col-md-6 my-cover" id="trys-saules">
+					<a href="https://kvlt.pl/recenzje/trys-saules/" class="my-review-link" target="_blank">
 						<div class="my-overlay">
 							<div class="my-text">
-								<div class="text-center my-album-title">Earth Ground</div>
-								<div class="text-center my-artist">Thaw</div>
+								<div class="text-center my-album-title">***</div>
+								<div class="text-center my-artist">Trys Saules</div>
 								<br /><br />
-								<div class="text-center my-quote">Thaw is one of the most interesting black metal bands that you will probably find out there.</div>
+								<div class="text-center my-quote">Jak dla mnie, jest to faworyt do listy najciekawszych płyt tego roku i mam nadzieję, że nie zostanie pominięty w najważniejszych zestawieniach na koniec 2018.</div>
 								<footer class="text-center blockquote-footer">
-									Spyros from <cite>CVLT Nation</cite>
+									Vladymir from <cite>Kvlt</cite>
 								</footer>
 							</div>
 						</div>
@@ -133,16 +133,16 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-6 my-cover" id="trys-saules">
-					<a href="https://kvlt.pl/recenzje/trys-saules/" class="my-review-link" target="_blank">
+				<div class="col-md-6 my-cover" id="thaw">
+					<a href="https://www.cvltnation.com/thaw-earth-ground-album-review/" class="my-review-link" target="_blank">
 						<div class="my-overlay">
 							<div class="my-text">
-								<div class="text-center my-album-title">***</div>
-								<div class="text-center my-artist">Trys Saules</div>
+								<div class="text-center my-album-title">Earth Ground</div>
+								<div class="text-center my-artist">Thaw</div>
 								<br /><br />
-								<div class="text-center my-quote">Jak dla mnie, jest to faworyt do listy najciekawszych płyt tego roku i mam nadzieję, że nie zostanie pominięty w najważniejszych zestawieniach na koniec 2018.</div>
+								<div class="text-center my-quote">Thaw is one of the most interesting black metal bands that you will probably find out there.</div>
 								<footer class="text-center blockquote-footer">
-									Vladymir from <cite>Kvlt</cite>
+									Spyros from <cite>CVLT Nation</cite>
 								</footer>
 							</div>
 						</div>
@@ -186,11 +186,11 @@
 		<div class="jumbotron jumbotron-fluid" id="my-page-footer">
 			<div class="container">
 				<div class="text-center" id="my-socials">
-					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank"><img src="img/icons/facebook.png" /></a>
-					<a href="https://github.com/mateuszchrzanowski" target="_blank"><img src="img/icons/github.png" /></a>
-					<a href="#" target="_blank"><img src="img/icons/linkedin.png" /></a>
+					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank">facebook</a>
+					<a href="https://github.com/mateuszchrzanowski?tab=repositories" target="_blank">github</a>
+					<a href="#" target="_blank">linkedin</a>
 				</div>
-				<div class="text-center" id="my-copy">&copy; 2018 Copyright Mateusz Chrzanowski</div>
+				<div class="text-center" id="my-copy">&copy; <a href="#">MCh</a> 2018</div>
 			</div>
 		</div>
 	</body>
