edited header and footer, changed albums order, added some media queries

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			</div>
 		</div>
 		
-		<div class="jumbotron jumbotron-fluid" id="my-page-footer">
+		<!--<div class="jumbotron jumbotron-fluid" id="my-page-footer">
 			<div class="container">
 				<div class="text-center" id="my-socials">
 					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank">facebook</a>
@@ -192,6 +192,20 @@
 				</div>
 				<div class="text-center" id="my-copy">&copy; <a href="#">MCh</a> 2018</div>
 			</div>
+		</div>-->
+		<div class="jumbotron jumbotron-fluid" id="my-page-footer">
+			<div class="row text-center justify-content-md-center" id="my-socials">
+				<div class="col-md-2 my-social-colum">
+					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank">facebook</a>
+				</div>
+				<div class="col-md-2 my-social-colum">
+					<a href="https://github.com/mateuszchrzanowski?tab=repositories" target="_blank">github</a>
+				</div>
+				<div class="col-md-2 my-social-colum">
+					<a href="#" target="_blank">linkedin</a>
+				</div>
+			</div>
+			<div class="text-center" id="my-copy">&copy; <a href="#">MCh</a> 2018</div>
 		</div>
 	</body>
 </html>
