updated link to my CV Website, deleted unnecessary code from my_style.css file

--- a/index.html
+++ b/index.html
@@ -183,16 +183,6 @@
 			</div>
 		</div>
 		
-		<!--<div class="jumbotron jumbotron-fluid" id="my-page-footer">
-			<div class="container">
-				<div class="text-center" id="my-socials">
-					<a href="https://www.facebook.com/mateusz.chrzanowski.3" target="_blank">facebook</a>
-					<a href="https://github.com/mateuszchrzanowski?tab=repositories" target="_blank">github</a>
-					<a href="#" target="_blank">linkedin</a>
-				</div>
-				<div class="text-center" id="my-copy">&copy; <a href="#">MCh</a> 2018</div>
-			</div>
-		</div>-->
 		<div class="jumbotron jumbotron-fluid" id="my-page-footer">
 			<div class="row text-center justify-content-md-center" id="my-socials">
 				<div class="col-md-2 my-social-colum">
@@ -205,7 +195,7 @@
 					<a href="#" target="_blank">linkedin</a>
 				</div>
 			</div>
-			<div class="text-center" id="my-copy">&copy; <a href="#">MCh</a> 2018</div>
+			<div class="text-center" id="my-copy">&copy; <a href="https://mateuszchrzanowski.github.io/WebCV_minimal/" target="_blank">MCh</a> 2018</div>
 		</div>
 	</body>
 </html>
