Added linkedin link

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					<a href="https://github.com/mateuszchrzanowski?tab=repositories" target="_blank">github</a>
 				</div>
 				<div class="col-md-2 my-social-colum">
-					<a href="#" target="_blank">linkedin</a>
+					<a href="https://www.linkedin.com/in/mateusz-chrzanowski-035383192/" target="_blank">linkedin</a>
 				</div>
 			</div>
 			<div class="text-center" id="my-copy">&copy; <a href="https://mateuszchrzanowski.github.io/WebCV_minimal/" target="_blank">MCh</a> 2018</div>
